--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "beautifulsoup4 (>=4.13.3,<5.0.0)",
     "requests (>=2.32.3,<3.0.0)",
     "pandas (>=2.2.3,<3.0.0)",
-    "xlsxwriter (>=3.2.2,<4.0.0)"
+    "xlsxwriter (>=3.2.2,<4.0.0)",
+    "fake-useragent (>=2.0.3,<3.0.0)"
 ]
 
 
